--- a/apps/ux-films-finder/src/app/components/popup-from-movie/popup-from-movie.component.less
+++ b/apps/ux-films-finder/src/app/components/popup-from-movie/popup-from-movie.component.less
@@ -1,17 +1,19 @@
-.popup {
+.popup-film-movie {
   &__img {
     max-width: 90vw;
     max-height: 90vh;
     object-fit: contain;
   }
   &__arrow {
-    width: 30px;
-    height: 30px;
+    width: 70px;
+    height: 70px;
     position: absolute;
-    top: 0;
-    transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
+    top: 50%;
+    left: 90%;
     fill: #fff;
     cursor: pointer;
+    &._left-arrow {
+      left: 10%;
+    }
   }
 }
