--- a/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.less
+++ b/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.less
@@ -123,3 +123,27 @@
     background-color: @color-baby;
   }
 }
+@media screen and (max-width: 1230px) {
+  .genre-label {
+    font-size: 16px;
+    padding: 3px 28px;
+    margin: 1px 20px 20px 1px;
+    line-height: 20px;
+  }
+}
+@media screen and (max-width: 830px) {
+  .genre-label {
+    font-size: 14px;
+    padding: 2px 25px;
+    margin: 1px 13px 13px 1px;
+    line-height: 17px;
+  }
+}
+@media screen and (max-width: 510px) {
+  .genre-label {
+    font-size: 10px;
+    padding: 1px 19px;
+    margin: 1px 10px 10px 1px;
+    line-height: 15px;
+  }
+}
