new @media screen film-banner.component

--- a/apps/ux-films-finder/src/app/components/banner/film-banner.component.less
+++ b/apps/ux-films-finder/src/app/components/banner/film-banner.component.less
@@ -292,9 +292,14 @@
     }
     &__description {
       grid-template-columns: 140px 150px;
+      &-title {
+        font-size: 13px;
+      }
       &-info {
+        font-size: 13px;
         &._icon {
           margin-left: 110px;
+          grid-template-rows: 22px 22px 22px 22px;
         }
       }
     }
