--- a/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.html
+++ b/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.html
@@ -13,8 +13,8 @@
       Найти
     </button>
   </form>
-  <ff-loader *ngIf="loading; else searchResultsTemplate"></ff-loader
-  ><ng-template #searchResultsTemplate>
+  <ff-loader *ngIf="loading; else searchResultsTemplate"></ff-loader>
+  <ng-template #searchResultsTemplate>
     <ng-container *ngIf="!searchParam; else contentTemplate">
       <div class="search-person__list-empty">
         Здесь будет отображаться результат, введите что-то в поиск
