--- a/apps/ux-films-finder/src/app/components/category/category.component.html
+++ b/apps/ux-films-finder/src/app/components/category/category.component.html
@@ -1,4 +1,6 @@
 <div class="category">
+  <ff-loader *ngIf="loading"></ff-loader>
+
   <div class="category__card-list">
     <ng-container *ngFor="let film of (films$ | async)?.items">
       <a
@@ -15,6 +17,7 @@
       </a>
     </ng-container>
   </div>
+
   <mat-paginator
     class="category__paginator"
     [length]="(films$ | async)?.total"
