new film-banner.component

--- a/apps/ux-films-finder/src/app/components/banner/film-banner.component.html
+++ b/apps/ux-films-finder/src/app/components/banner/film-banner.component.html
@@ -1,71 +1,65 @@
-<ng-container>
-  <div class="banner keen-slider" #sliderRef>
-    <div
-      class="banner__slide keen-slider__slide slide1"
-      *ngFor="let film of films$ | async"
-    >
-      <div class="banner__main-info">
-        <div class="banner__name">
-          <div class="banner__name-ru">{{ film?.nameRu }}</div>
-          <div class="banner__name-en">{{ film?.nameEn }}</div>
-          <div class="banner__genre">
-            <div *ngFor="let genre of film.genres">
-              <ff-genre-label [genres]="genre.genre"></ff-genre-label>
-            </div>
-          </div>
-        </div>
-        <div class="banner__poster">
-          <img
-            class="banner__poster-image"
-            src="{{ film?.posterUrl }}"
-            alt="Постер"
-          />
-        </div>
-        <div class="banner__description">
-          <div class="banner__description-title _rating">Рейтинг</div>
-          <div class="banner__description-info _rating">
-            <div class="banner__description-info _rating _icon">
-              {{ film?.rating }}
-            </div>
-          </div>
-          <div class="banner__description-title _filmLength">
-            Продолжительность
-          </div>
-          <div class="banner__description-info _filmLength">
-            {{ film?.filmLength }}
-          </div>
-          <div class="banner__description-title _year">Год выпуска</div>
-          <div class="banner__description-info _year">{{ film?.year }}</div>
-          <div class="banner__description-title _country">Страна</div>
-          <div class="banner__description-info _country">
-            <ng-container *ngFor="let country of film.countries">
-              {{ country.country }}
-            </ng-container>
-          </div>
+<div class="banner keen-slider" #sliderRef>
+  <div
+    class="banner__slide keen-slider__slide"
+    *ngFor="let film of films$ | async"
+  >
+    <div class="banner__name">
+      <div class="banner__name-ru">{{ film?.nameRu }}</div>
+      <div class="banner__name-en">{{ film?.nameEn }}</div>
+      <div class="banner__genre">
+        <div *ngFor="let genre of film.genres">
+          <ff-genre-label [genres]="genre.genre"></ff-genre-label>
         </div>
       </div>
     </div>
-    <svg
-      [ngClass]="
-        'arrow arrow--left ' + (currentSlide === 0 ? 'arrow--disabled' : '')
-      "
-      (click)="slider.prev()"
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 24 24"
-    >
-      <path
-        d="M16.67 0l2.83 2.829-9.339 9.175 9.339 9.167-2.83 2.829-12.17-11.996z"
+    <div class="banner__poster">
+      <img
+        class="banner__poster-image"
+        src="{{ film?.posterUrl }}"
+        alt="Постер"
       />
-    </svg>
-    <svg
-      *ngIf="(films$ | async)?.length as size"
-      class="arrow arrow--right"
-      [ngClass]="size - 1 === currentSlide ? 'arrow--disabled' : ''"
-      (click)="slider.next()"
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 24 24"
-    >
-      <path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z" />
-    </svg>
+    </div>
+    <div class="banner__description">
+      <div class="banner__description-title _rating">Рейтинг</div>
+      <div class="banner__description-info _rating">
+        <div class="banner__description-info _rating _icon">
+          {{ film?.rating }}
+        </div>
+      </div>
+      <div class="banner__description-title _filmLength">Продолжительность</div>
+      <div class="banner__description-info _filmLength">
+        {{ film?.filmLength }}
+      </div>
+      <div class="banner__description-title _year">Год выпуска</div>
+      <div class="banner__description-info _year">{{ film?.year }}</div>
+      <div class="banner__description-title _country">Страна</div>
+      <div class="banner__description-info _country">
+        <ng-container *ngFor="let country of film.countries">
+          {{ country.country }}
+        </ng-container>
+      </div>
+    </div>
   </div>
-</ng-container>
+  <svg
+    [ngClass]="
+      'arrow arrow--left ' + (currentSlide === 0 ? 'arrow--disabled' : '')
+    "
+    (click)="slider.prev()"
+    xmlns="http://www.w3.org/2000/svg"
+    viewBox="0 0 24 24"
+  >
+    <path
+      d="M16.67 0l2.83 2.829-9.339 9.175 9.339 9.167-2.83 2.829-12.17-11.996z"
+    />
+  </svg>
+  <svg
+    *ngIf="(films$ | async)?.length as size"
+    class="arrow arrow--right"
+    [ngClass]="size - 1 === currentSlide ? 'arrow--disabled' : ''"
+    (click)="slider.next()"
+    xmlns="http://www.w3.org/2000/svg"
+    viewBox="0 0 24 24"
+  >
+    <path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z" />
+  </svg>
+</div>
