--- a/apps/ux-films-finder/src/app/components/similar-films/similar-films.component.less
+++ b/apps/ux-films-finder/src/app/components/similar-films/similar-films.component.less
@@ -22,7 +22,28 @@
     display: none; //TODO: Hide scrollbar?
   }
   &__card {
-    width: 310px;
     box-shadow: 0px 0px 20px black;
+  }
+  &__dots {
+    display: flex;
+    height: 100px;
+    padding: 10px 0;
+    justify-content: center;
+  }
+  &__dot {
+    border: none;
+    width: 10px;
+    height: 10px;
+    background: #c5c5c5;
+    border-radius: 50%;
+    margin: 0 5px;
+    padding: 5px;
+    cursor: pointer;
+  }
+  &:focus {
+    outline: none;
+  }
+  &.active {
+    background: #000;
   }
 }
