--- a/apps/ux-films-finder/src/app/components/screen-gallery/screen-gallery.component.less
+++ b/apps/ux-films-finder/src/app/components/screen-gallery/screen-gallery.component.less
@@ -31,7 +31,7 @@
       content: '';
       width: 80px;
       height: 476px;
-      background: linear-gradient(90deg, @color-black-00, @color-white-ff04);
+      background: linear-gradient(90deg, @color-gray-42, @color-white-ff04);
     }
     &:after {
       transform: rotate(0.5turn);
