--- a/apps/ux-films-finder/src/app/components/search/search.component.html
+++ b/apps/ux-films-finder/src/app/components/search/search.component.html
@@ -1,63 +1,60 @@
 <div class="search">
-  <input
-    class="search__input"
-    type="text"
-    [(ngModel)]="searchInput"
-    (ngModelChange)="getInfo()"
-    placeholder=""
-  />
-  <mat-icon routerLink="advanced-search" class="search__filter">tune</mat-icon>
+  <div class="search__field">
+    <input
+      class="search__input"
+      type="text"
+      [(ngModel)]="searchInput"
+      (ngModelChange)="getInfo()"
+      placeholder=""
+    />
+    <mat-icon routerLink="advanced-search" class="search__filter"
+      >tune</mat-icon
+    >
+  </div>
+  <ng-container class="search__results">
+    <mat-list class="search__results-list">
+      <p *ngIf="searchInput" class="search__results-title-name">
+        Фильмы и сериалы
+      </p>
+      <mat-list-item
+        class="search__results-list-item"
+        *ngFor="let film of films$ | async | slice: 0:3"
+        routerLink="/details/{{ film?.filmId }}"
+        ><img class="search__poster" src="{{ film?.posterUrlPreview }}" />
+
+        <div class="search__info">
+          <p class="search__name-ru">{{ film?.nameRu }}</p>
+          <p class="search__name-en">{{ film?.nameEn }}</p>
+        </div>
+      </mat-list-item>
+      <div class="search__show-more">
+        <p *ngIf="searchInput" class="search__button" (click)="getListFilms()">
+          Показать все
+        </p>
+        <mat-icon *ngIf="searchInput" class="search__arrow-icon">
+          keyboard_arrow_right
+        </mat-icon>
+      </div>
+
+      <p *ngIf="searchInput" class="search__results-title-name">Персоны</p>
+      <mat-list-item
+        class="search__results-list-item"
+        *ngFor="let actor of actors$ | async | slice: 0:3"
+        routerLink="/persons/{{ actor?.kinopoiskId }}"
+        ><img class="search__poster" src="{{ actor?.posterUrl }}" />
+        <div class="search__info">
+          <p class="search__name-ru">{{ actor?.nameRu }}</p>
+          <p class="search__name-en">{{ actor?.nameEn }}</p>
+        </div>
+      </mat-list-item>
+      <div class="search__show-more">
+        <p *ngIf="searchInput" class="search__button" (click)="getActorFilms()">
+          Показать все
+        </p>
+        <mat-icon *ngIf="searchInput" class="search__arrow-icon"
+          >keyboard_arrow_right</mat-icon
+        >
+      </div>
+    </mat-list>
+  </ng-container>
 </div>
-
-<ng-container class="search-field">
-  <mat-list class="search-field__list">
-    <p *ngIf="searchInput" class="search-field__title-name">Фильмы и сериалы</p>
-    <mat-list-item
-      class="search-field__list-item"
-      *ngFor="let film of films$ | async | slice: 0:3"
-      routerLink="/details/{{ film?.filmId }}"
-      ><img class="search-field__img" src="{{ film?.posterUrlPreview }}" />
-
-      <div class="search-field__names">
-        <p class="search-field__name-ru">{{ film?.nameRu }}</p>
-        <p class="search-field__name-en">{{ film?.nameEn }}</p>
-      </div>
-    </mat-list-item>
-    <div class="search-field__full-list">
-      <p
-        *ngIf="searchInput"
-        class="search-field__button"
-        (click)="getListFilms()"
-      >
-        Показать все
-      </p>
-      <mat-icon *ngIf="searchInput" class="search-field__button">
-        keyboard_arrow_right
-      </mat-icon>
-    </div>
-
-    <p *ngIf="searchInput" class="search-field__second-title-name">Персоны</p>
-    <mat-list-item
-      class="search-field__list-item"
-      *ngFor="let actor of actors$ | async | slice: 0:3"
-      routerLink="/persons/{{ actor?.kinopoiskId }}"
-      ><img class="search-field__img" src="{{ actor?.posterUrl }}" />
-      <div class="search-field__names">
-        <p class="search-field__name-ru">{{ actor?.nameRu }}</p>
-        <p class="search-field__name-en">{{ actor?.nameEn }}</p>
-      </div>
-    </mat-list-item>
-    <div class="search-field__full-list">
-      <p
-        *ngIf="searchInput"
-        class="search-field__button"
-        (click)="getActorFilms()"
-      >
-        Показать все
-      </p>
-      <mat-icon *ngIf="searchInput" class="search-field__button"
-        >keyboard_arrow_right</mat-icon
-      >
-    </div>
-  </mat-list>
-</ng-container>
