--- a/apps/ux-films-finder/src/app/components/screen-gallery/screen-gallery.component.html
+++ b/apps/ux-films-finder/src/app/components/screen-gallery/screen-gallery.component.html
@@ -1,14 +1,14 @@
-<div class="screen-gallery__slider" [class._inactive]="!!images.length">
+<div class="screen-gallery__slider" [class._inactive]="!!activeImage.length">
   <div class="screen-gallery keen-slider" #sliderRef>
-    <div *ngIf="images.length" class="screen-gallery__stripe"></div>
+    <div *ngIf="activeImage.length" class="screen-gallery__stripe"></div>
     <div
       class="screen-gallery__slide keen-slider__slide"
-      *ngFor="let img of images"
+      *ngFor="let image of activeImage"
     >
       <img
         class="screen-gallery__image"
-        (click)="openDialog(img.imageUrl)"
-        src="{{ img.imageUrl }}"
+        (click)="openDialog(image.imageUrl)"
+        src="{{ image.imageUrl }}"
         alt="image"
       />
     </div>
