--- a/apps/ux-films-finder/src/app/components/movie-cadr/movie-cadr.component.less
+++ b/apps/ux-films-finder/src/app/components/movie-cadr/movie-cadr.component.less
@@ -9,7 +9,7 @@
   }
   &__arrows {
     position: absolute;
-
+    bottom: 50%;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -17,10 +17,9 @@
     cursor: pointer;
   }
   &__arrow {
-    max-height: 64px;
-    max-width: 64px;
-    margin: 0 80px;
-    viewbox: 0 0 100% 100%;
+    height: 64px;
+    width: 64px;
+    margin: 0 40px;
     stroke: @color-white-ff;
     fill: none;
     &._right-arrow {
