--- a/apps/ux-films-finder/src/app/components/header/header.component.html
+++ b/apps/ux-films-finder/src/app/components/header/header.component.html
@@ -15,8 +15,8 @@
       <mat-nav-list class="header__navigation">
         <a class="header__link" mat-flat-button routerLink="/news">НОВОСТИ</a>
         <a class="header__link" mat-flat-button routerLink="/show">ТОК-ШОУ</a>
-        <a class="header__link" mat-flat-button routerLink="/for-children"
-          >ДЕТСКИЙ
+        <a class="header__link" mat-flat-button routerLink="/for-children">
+          ДЕТСКИЙ
         </a>
         <a class="header__link" mat-flat-button routerLink="/cartoon">
           МУЛЬТФИЛЬМЫ
