--- a/apps/ux-films-finder/src/app/components/header/header.component.less
+++ b/apps/ux-films-finder/src/app/components/header/header.component.less
@@ -2,8 +2,8 @@
 
 header {
   width: 100%;
-  background: #494949;
-  position: absolute;
+  background: @color-gray-49;
+  position: fixed;
   left: 0;
   height: 70px;
 }
