--- a/apps/ux-films-finder/src/app/components/search/search.component.less
+++ b/apps/ux-films-finder/src/app/components/search/search.component.less
@@ -10,6 +10,7 @@
     border-radius: 18px;
     padding: 5px;
     max-width: 439px;
+    z-index: 2;
   }
 
   &__filter {
@@ -153,7 +154,7 @@
       background: #494949;
       border-radius: 10px;
     }
-    &__input {
+    d &__input {
       width: 120px;
     }
   }
